; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_dlil.c_ifp_if_framer_extended.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_dlil.c_ifp_if_framer_extended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.mbuf = type { i32 }
%struct.sockaddr = type { i32 }

@EJUSTRETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*, %struct.mbuf**, %struct.sockaddr*, i8*, i8*, i64*, i64*)* @ifp_if_framer_extended to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ifp_if_framer_extended(%struct.ifnet* %0, %struct.mbuf** %1, %struct.sockaddr* %2, i8* %3, i8* %4, i64* %5, i64* %6) #0 {
  %8 = alloca %struct.ifnet*, align 8
  %9 = alloca %struct.mbuf**, align 8
  %10 = alloca %struct.sockaddr*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64*, align 8
  %14 = alloca i64*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %8, align 8
  store %struct.mbuf** %1, %struct.mbuf*** %9, align 8
  store %struct.sockaddr* %2, %struct.sockaddr** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8* %4, i8** %12, align 8
  store i64* %5, i64** %13, align 8
  store i64* %6, i64** %14, align 8
  %15 = load %struct.mbuf**, %struct.mbuf*** %9, align 8
  %16 = load %struct.mbuf*, %struct.mbuf** %15, align 8
  %17 = call i32 @m_freem(%struct.mbuf* %16)
  %18 = load %struct.mbuf**, %struct.mbuf*** %9, align 8
  store %struct.mbuf* null, %struct.mbuf** %18, align 8
  %19 = load i64*, i64** %13, align 8
  %20 = icmp ne i64* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %7
  %22 = load i64*, i64** %13, align 8
  store i64 0, i64* %22, align 8
  br label %23

23:                                               ; preds = %21, %7
  %24 = load i64*, i64** %14, align 8
  %25 = icmp ne i64* %24, null
  br i1 %25, label %26, label %28

26:                                               ; preds = %23
  %27 = load i64*, i64** %14, align 8
  store i64 0, i64* %27, align 8
  br label %28

28:                                               ; preds = %26, %23
  %29 = load i32, i32* @EJUSTRETURN, align 4
  ret i32 %29
}

declare dso_local i32 @m_freem(%struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
